# Classifier

./: eval.py  main.py  test.py  train.py
labs/: export.ipynb  inference.ipynb
labs/.ipynb_checkpoints/: export-checkpoint.ipynb  inference-checkpoint.ipynb
lib/: augmentation.py
libtorch/: CMakeLists.txt  main.cpp
models/: model.py
models/deepcalib/: model.py
models/efficientnet/: model.py  utils.py
models/fisheye/: layers.py  model.py
models/mobilenet/: model.py
utils/: arguments.py  beholder.py  config.py  executable.py
